# pico-usynth

./: README.md
src/: CMakeLists.txt  main.c  u_synth_tone_tables.h  us_adsr.c  us_adsr.h  us_channel.c  us_channel.h  us_channels.c  us_channels.h  us_config.h  us_debug.h  us_lpf.c  us_lpf.h  us_midi_in.c  us_midi_in.h  us_midi_uart.c  us_midi_uart.h  us_patch.c  us_patch.h  us_patch_1.c  us_patch_1.h  us_patch_sample.c  us_patch_sample.h  us_pitch.c  us_pitch.h  us_pitch_table.h  us_pm.c  us_pm.h  us_tuner.c  us_tuner.h  us_uint8_dlist.c  us_uint8_dlist.h  us_wave.c  us_wave.h  us_wave_sin_table.h
src/utils/: main.c
src/utils/midi-packer/: output.txt  pom.xml
src/utils/midi-packer/src/main/java/org/fruitbat/midipacker/: CompSyn.java  Main.java  MidiPacker.java  PrSyn.java  PrnSyn.java  Syn.java  SynWriter.java  SynWriter1.java  SynWriterNull.java  TempoHandler.java  TrackHandler.java  TrackTempo.java  Voice.java  VoiceGroup.java  VoiceGroupKey.java  VoiceGroups.java
